--- a/projects/ng-stator/package.json
+++ b/projects/ng-stator/package.json
@@ -1,11 +1,9 @@
 {
   "name": "ng-stator",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "peerDependencies": {
     "@angular/common": "^8.2.4",
-    "@angular/core": "^8.2.4"
-  },
-  "dependencies": {
+    "@angular/core": "^8.2.4",
     "@ngrx/store": "^8.3.0"
   }
 }
